--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Pinterest",
-    "slug": "Pinterest",
+    "name": "ShareMe",
+    "slug": "ShareMe",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/images/icon.png",
