--- a/app.json
+++ b/app.json
@@ -3,7 +3,7 @@
     "name": "ShareMe",
     "slug": "ShareMe",
     "privacy": "public",
-    "description": "A full stack photos sharing social Media app with Made Expo",
+    "description": "A full stack photos sharing social Media Made with ❤",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/images/icon.png",
